--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -13,6 +13,7 @@ nav {
     left: 0;
     right: 0;
     z-index: 999;
+    border-bottom: 1px solid rgb(119, 119, 119);
 
     .logo {
         display: flex;
@@ -48,24 +49,27 @@ nav {
 .faq {
     display: flex;
     align-items: center;
+    margin-right: 8rem;
 
     ul {
         display: flex;
         align-items: center;
         list-style: none;
-        margin-right: 8rem;
 
         li {
             margin-left: 2rem;
             font-weight: 800;
+            padding: 14px;
             font-size: 20px;
             cursor: pointer;
         }
-        img {
-            margin-left: 2rem;
-            cursor: pointer;
-        }
     }
+    img {
+        margin-left: 2rem;
+        .contact {
+            cursor: pointer;
+        }      
+    }                     
 }
 
 .active {
