--- a/sass/partials/_about.scss
+++ b/sass/partials/_about.scss
@@ -12,7 +12,7 @@ body {
 .about {
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.6),rgba(0, 0, 0, 0.6)), url(../../assets/about.jpg);
+    background: linear-gradient(rgba(0,0,0,0.6),rgba(0, 0, 0, 0.6)), url('../../assets/about.jpg');
     background-position: center;
     background-size: cover;
 
